# robium-applications

./: .gitignore  CLAUDE.md  README.md  REGISTRY.md
.claude/: settings.json
apps/: README.md
apps/manip-trial/: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
apps/manip-trial/docker/: demo.Dockerfile
apps/manip-trial/docs/: architecture-brief.md
apps/manip-trial/src/manip_trial/: __init__.py  config.py  ladder.py  run.py
apps/manip-trial/src/manip_trial/demo/: episode_runner.py  gateway.py  ui.py
apps/manip-trial/tests/: test_demo.py  test_ladder.py  test_smoke.py
apps/nav-trial/: .dockerignore  Makefile  README.md  cloudbuild.yaml
apps/nav-trial/docker/: Dockerfile  compose.yaml  entrypoint.sh
apps/nav-trial/docs/: architecture-brief.md
apps/nav-trial/scripts/: demo_gateway.py  run_slam.sh  run_smoke.sh
apps/nav-trial/src/nav_trial_bringup/: package.xml  setup.cfg  setup.py
apps/nav-trial/src/nav_trial_bringup/config/: nav2_params.yaml  slam_params.yaml
apps/nav-trial/src/nav_trial_bringup/launch/: demo.launch.py  nav.launch.py  sim.launch.py  slam.launch.py
apps/nav-trial/src/nav_trial_bringup/maps/: map.pgm  map.yaml
apps/nav-trial/src/nav_trial_bringup/nav_trial_bringup/: demo_init.py  drive_mapping_route.py  send_goals.py
apps/nav-trial/tests/: check_map.py  check_scan.py  check_ws.sh  pty_probe.py  smoke_nav.py
apps/vla-trial/: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
apps/vla-trial/docker/: demo.Dockerfile  spike.Dockerfile
apps/vla-trial/docs/: architecture-brief.md
apps/vla-trial/scripts/: fetch_assets.sh
apps/vla-trial/src/vla_trial/: config.py  run.py
apps/vla-trial/src/vla_trial/data/: record.py
apps/vla-trial/src/vla_trial/demo/: episode_runner.py  gateway.py  ui.py
apps/vla-trial/src/vla_trial/env/: ik.py  so101_pick.py
apps/vla-trial/src/vla_trial/env/assets/: scene_pick.xml
apps/vla-trial/src/vla_trial/oracle/: scripted_pick.py
apps/vla-trial/src/vla_trial/policy/: evaluate.py
apps/vla-trial/src/vla_trial/spike/: bench_policy.py  bench_render.py
apps/vla-trial/src/vla_trial/viz/: rerun_logger.py
apps/vla-trial/tests/: test_assets.py  test_dataset.py  test_demo.py  test_env.py  test_narrative.py  test_oracle.py  test_reachability.py  test_rerun_logger.py  test_smoke.py  test_spike_policy.py  test_spike_render.py  test_train_starts.py
docs/superpowers/plans/: 2026-07-10-nav-trial.md  2026-07-13-vla-trial.md  2026-07-15-manip-trial-demo-page.md
docs/superpowers/specs/: 2026-07-10-nav-trial-design.md  2026-07-13-vla-trial-design.md  2026-07-15-manip-trial-demo-page-design.md  2026-07-15-vla-trial-demo-page-design.md  2026-07-18-test-assets-corpus-design.md
learnings/: 2026-07-10.md  2026-07-12.md  2026-07-13.md  2026-07-14-vla-trial.md  2026-07-15-manip-trial.md  2026-07-15-vla-trial.md  README.md
