[project]
name = "manip-trial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Al Jazari", email = "jazarium@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "lerobot[diffusion,pusht,training,viz]==0.6.0",
]

[project.scripts]
manip-trial = "manip_trial:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
