[project]
name = "manip-trial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Al Jazari", email = "jazarium@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    # No `viz` extra: it pins rerun-sdk<0.34.0, which conflicts with
    # gradio_rerun 0.34.1 — the explicit rerun-sdk pin below replaces it
    # (same resolution vla-trial uses).
    "lerobot[diffusion,pusht,training]==0.6.0",
    # Demo page (spec 2026-07-15). rerun-sdk and gradio_rerun are pinned to
    # each other — the viewer component and SDK must match minor versions.
    "rerun-sdk==0.34.1",
    "gradio>=6.0.0",
    "gradio_rerun==0.34.1",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.scripts]
manip-trial = "manip_trial:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
markers = ["slow: loads real checkpoints / boots the gateway; run via make demo-smoke"]
addopts = "-m 'not slow'"
