[project]
name = "vla-trial"
version = "0.1.0"
description = "Language-conditioned VLA control of a simulated SO-101 arm"
readme = "README.md"
authors = [{ name = "Al Jazari", email = "jazarium@gmail.com" }]
# LeRobot 0.6.0 hard-requires >=3.12.
requires-python = ">=3.12"
dependencies = [
    "lerobot[smolvla,training]==0.6.0",
    # >=3.1.3 is the menagerie SO-101 floor. Never let gym-hil/gym-aloha
    # (mujoco<3.9) or gym-xarm (mujoco<3.0) into this tree — they downgrade it.
    "mujoco>=3.10.0",
    "gymnasium>=1.0.0",
    # Pinned exactly: matches robium's rerun skill and the gradio_rerun
    # component Part 2 depends on.
    "rerun-sdk==0.34.1",
    "numpy>=1.26",
    # Demo page (spec 2026-07-15): gradio_rerun is pinned to the rerun-sdk
    # version by design (the component embeds a matching viewer build).
    "gradio>=6.0.0",
    "gradio_rerun==0.34.1",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.1.1"]

[tool.pytest.ini_options]
# The M0 spike tests re-measure SmolVLA CPU latency at ~9 s per forward pass —
# 268 s, 56% of the suite — to re-derive numbers that are already committed in
# docs/architecture-brief.md. They are a benchmark, not a regression test, so
# they are OUT of the default path. Run them deliberately: `make spike-test`.
#
# Everything else (env, oracle canary, reachability, assets, render) stays in
# the default run — those are real regression tests and must not be skipped.
markers = [
    "slow: a benchmark or long rollout; deselected by default, run via `make spike-test`",
]
addopts = "-m 'not slow'"
