<?xml version="1.0"?>
<package format="3">
  <name>nav_trial_bringup</name>
  <version>0.1.0</version>
  <description>Bringup, SLAM, and navigation composition for the nav-trial app.</description>
  <maintainer email="jazarium@gmail.com">Al Jazari</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
